--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,5 @@ addons:
     token:
       secure: $SONAR_TOKEN # encrypted value of your token
 script:
-- node ./node_modules/jest/bin/jest.js
+- node ./node_modules/jest/bin/jest.js --coverage
 - sonar-scanner
