update locv path

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,4 +3,4 @@ sonar.organization=ankitprahladsoni-github
 sonar.projectVersion=0.0.1
 sonar.sources=components
 sonar.host.url=https://sonarcloud.io
-sonar.typescript.lcov.reportPaths=coverage
+sonar.typescript.lcov.reportPaths=coverage/lcov.info
