exclude test folder in coverage

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,3 +4,4 @@ sonar.projectVersion=0.0.1
 sonar.sources=components
 sonar.host.url=https://sonarcloud.io
 sonar.typescript.lcov.reportPaths=coverage/lcov.info
+sonar.typescript.exclusions=**/node_modules/**,**/bower_components/**,__tests__
