install codecov in scripts

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ addons:
     token:
       secure: $SONAR_TOKEN # encrypted value of your token
 script:
+- npm install codecov -g
 - node ./node_modules/jest/bin/jest.js --coverage
 - sonar-scanner
 notifications:
