--- a/package.json
+++ b/package.json
@@ -5,29 +5,36 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "eject": "expo eject",
-    "test": "node ./node_modules/jest/bin/jest.js --watchAll"
+    "test": "node ./node_modules/jest/bin/jest.js --watchAll",
+    "tslint": "tslint --project .",
+    "tsc-test": "tsc --project . --noEmit",
+    "jest": "jest"
   },
   "jest": {
-    "preset": "react-native",
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js"
-    ],
+    "preset": "jest-expo",
     "transform": {
-      "^.+\\.(js)$": "<rootDir>/node_modules/babel-jest",
-      "\\.(ts|tsx)$": "<rootDir>/node_modules/ts-jest/preprocessor.js"
+      "^.+\\.js$": "<rootDir>/node_modules/react-native/jest/preprocessor.js",
+      "^.+\\.tsx?$": "ts-jest"
     },
-    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
-    "testPathIgnorePatterns": [
-      "\\.snap$",
-      "<rootDir>/node_modules/"
+    "testMatch": [
+      "**/__tests__/**/*.ts?(x)",
+      "**/?(*.)+(spec|test).ts?(x)"
     ],
-    "cacheDirectory": ".jest/cache"
+    "moduleFileExtensions": [
+      "js",
+      "ts",
+      "tsx"
+    ],
+    "globals": {
+      "ts-jest": {
+        "tsConfig": {
+          "jsx": "react"
+        }
+      }
+    }
   },
   "dependencies": {
     "@expo/samples": "2.1.1",
-    "@types/expo": "^31.0.5",
     "@types/react-navigation": "^3.0.1",
     "expo": "^31.0.2",
     "react": "16.5.0",
@@ -35,15 +42,19 @@
     "react-navigation": "^2.18.2"
   },
   "devDependencies": {
-    "@types/jest": "^23.3.10",
+    "@types/expo": "^31.0.6",
+    "@types/jest": "^23.3.11",
     "@types/react": "^16.7.18",
     "@types/react-native": "^0.57.23",
     "@types/react-test-renderer": "^16.0.3",
-    "babel-preset-expo": "^5.0.0",
+    "jest": "^23.6.0",
     "jest-expo": "^31.0.0",
     "react-addons-test-utils": "^15.6.2",
     "react-native-typescript-transformer": "^1.2.11",
+    "react-test-renderer": "^16.7.0",
     "ts-jest": "^23.10.5",
+    "tslint": "^5.12.0",
+    "tslint-config-airbnb": "^5.11.1",
     "typescript": "^3.2.2"
   },
   "private": true
