--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "node ./node_modules/jest/bin/jest.js --watchAll",
     "tslint": "tslint --project .",
     "tsc-test": "tsc --project . --noEmit",
-    "jest": "jest"
+    "jest": "node ./node_modules/jest/bin/jest.js"
   },
   "jest": {
     "preset": "jest-expo",
@@ -32,25 +32,31 @@
         }
       }
     },
+    "setupTestFrameworkScriptFile": "<rootDir>__tests__/SetupTests.js",
     "cacheDirectory": ".jest/cache"
   },
   "dependencies": {
-    "@expo/samples": "2.1.1",
-    "@types/react-navigation": "^3.0.1",
     "expo": "^31.0.2",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
     "react-navigation": "^2.18.2"
   },
   "devDependencies": {
+    "@expo/samples": "^2.1.1",
+    "@types/enzyme": "^3.1.15",
+    "@types/enzyme-adapter-react-16": "^1.0.3",
     "@types/expo": "^31.0.6",
     "@types/jest": "^23.3.11",
     "@types/react": "^16.7.18",
     "@types/react-native": "^0.57.23",
+    "@types/react-navigation": "^3.0.1",
     "@types/react-test-renderer": "^16.0.3",
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.7.1",
     "jest": "^23.6.0",
     "jest-expo": "^31.0.0",
     "react-addons-test-utils": "^15.6.2",
+    "react-dom": "^16.7.0",
     "react-native-typescript-transformer": "^1.2.11",
     "react-test-renderer": "^16.7.0",
     "ts-jest": "^23.10.5",
