add tslint error to sonar

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,3 +5,4 @@ sonar.sources=components,navigation,screens
 sonar.host.url=https://sonarcloud.io
 sonar.typescript.lcov.reportPaths=coverage/lcov.info
 sonar.typescript.exclusions=**/node_modules/**,**/bower_components/**,**/*spec.tsx
+sonar.typescript.tslint.reportPaths=report.json
