--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ addons:
 script:
 - npm install codecov -g
 - node ./node_modules/jest/bin/jest.js --coverage
+- yarn tslint -t json -o report.json --force
 - sonar-scanner
 notifications:
   email: false
