--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,18 @@
 language: node_js
 node_js:
-  - "node"
+  - 'node'
 cache: yarn
 addons:
   sonarcloud:
-    organization: "ankitprahladsoni-github" # the key of the org you chose at step #3
+    organization: 'ankitprahladsoni-github' # the key of the org you chose at step #3
     token:
       secure: $SONAR_TOKEN # encrypted value of your token
 script:
-- npm install codecov -g
-- node ./node_modules/jest/bin/jest.js --coverage
-- yarn tslint -t json -o report.json --force
-- sonar-scanner
+  - yarn jest --coverage
+  - yarn tslint -t json -o report.json --force
+  - sonar-scanner
 notifications:
   email: false
 after_success:
+  - yarn global add codecov
   - codecov
