--- a/package.json
+++ b/package.json
@@ -20,22 +20,23 @@
     "@expo/samples": "^2.1.1",
     "@types/enzyme": "^3.1.15",
     "@types/enzyme-adapter-react-16": "^1.0.3",
-    "@types/expo": "^31.0.6",
-    "@types/jest": "^23.3.11",
+    "@types/expo": "^31.0.7",
+    "@types/jest": "^23.3.12",
     "@types/react": "^16.7.18",
-    "@types/react-native": "^0.57.23",
+    "@types/react-native": "^0.57.27",
     "@types/react-navigation": "^3.0.1",
     "@types/react-test-renderer": "^16.0.3",
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.7.1",
     "jest": "^23.6.0",
+    "jest-each": "^23.6.0",
     "jest-expo": "^31.0.0",
     "react-addons-test-utils": "^15.6.2",
     "react-dom": "^16.7.0",
     "react-native-typescript-transformer": "^1.2.11",
     "react-test-renderer": "^16.7.0",
     "ts-jest": "^23.10.5",
-    "tslint": "^5.12.0",
+    "tslint": "^5.12.1",
     "tslint-config-airbnb": "^5.11.1",
     "typescript": "^3.2.2"
   },
