--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,20 @@
 language: node_js
 node_js:
   - 'node'
-cache: yarn
+cache:
+  yarn: true
+  directories:
+    - node_modules
 addons:
   sonarcloud:
-    organization: 'ankitprahladsoni-github' # the key of the org you chose at step #3
+    organization: 'ankitprahladsoni-github'
     token:
-      secure: $SONAR_TOKEN # encrypted value of your token
-script:
-  - yarn jest --coverage
-  - yarn tslint -t json -o report.json --force
-  - sonar-scanner
+      secure: $SONAR_TOKEN
+env:
+  - TEST_SUITE="yarn jest --coverage"
+  - TEST_SUITE="yarn tslint -t json -o report.json --force"
+  - TEST_SUITE="sonar-scanner"
+script: $TEST_SUITE
 notifications:
   email: false
 after_success:
