--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/enzyme-adapter-react-16": "^1.0.3",
     "@types/expo": "^31.0.7",
     "@types/jest": "^23.3.12",
+    "@types/jest-each": "^0.3.3",
     "@types/react": "^16.7.18",
     "@types/react-native": "^0.57.27",
     "@types/react-navigation": "^3.0.1",
