--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ addons:
     token:
       secure: $SONAR_TOKEN
 script:
-  - yarn jest --clearCache --coverage 
+  - yarn jest --coverage 
   - yarn tslint -t json -o report.json --force
   - sonar-scanner
 notifications:
