add more test scripts

--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "eject": "expo eject",
-    "test": "node ./node_modules/jest/bin/jest.js --watchAll",
+    "test": "node ./node_modules/jest/bin/jest.js",
+    "testo": "node ./node_modules/jest/bin/jest.js -o",
+    "testw": "node ./node_modules/jest/bin/jest.js --watch",
+    "testwa": "node ./node_modules/jest/bin/jest.js --watchAll",
     "tslint": "tslint --project .",
-    "tsc-test": "tsc --project . --noEmit",
-    "jest": "node ./node_modules/jest/bin/jest.js"
+    "tsc-test": "tsc --project . --noEmit"
   },
   "dependencies": {
     "expo": "^32.0.0",
