move everything to src folder

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 sonar.projectKey=issues-tracker
 sonar.organization=ankitprahladsoni-github
 sonar.projectVersion=0.0.1
-sonar.sources=components,navigation,screens
+sonar.sources=src
 sonar.host.url=https://sonarcloud.io
 sonar.typescript.lcov.reportPaths=coverage/lcov.info
 sonar.typescript.exclusions=**/node_modules/**,**/bower_components/**,**/*spec.tsx
