--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,9 @@
     "strict": true,
     "baseUrl": "./",
     "paths": {
-      "testUtils/*": ["testUtils/*"],
-      "components/*": ["src/components/*"]
+      "src/*": ["src/*"],
+      "components/*": ["src/components/*"],
+      "testUtils/*": ["testUtils/*"]
     },
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true
