created test cases for Issues screen

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,5 +15,6 @@
     "prettier.singleQuote": true,
     "prettier.trailingComma": "es5",
     "typescript.suggest.completeFunctionCalls": true,
-    "editor.snippetSuggestions": "top"
+    "editor.snippetSuggestions": "top",
+    "jest.pathToJest": "yarn test"
 }
