--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/enzyme": "^3.1.15",
     "@types/enzyme-adapter-react-16": "^1.0.3",
     "@types/expo": "^31.0.7",
+    "@types/expo__vector-icons": "^6.2.3",
     "@types/jest": "^23.3.12",
     "@types/jest-each": "^0.3.3",
     "@types/react": "^16.7.18",
