--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "expo": "^32.0.0",
+    "native-base": "^2.12.0",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-navigation": "^3.0.9"
@@ -29,7 +30,6 @@
     "@types/react": "^16.7.18",
     "@types/react-native": "^0.57.27",
     "@types/react-navigation": "^3.0.1",
-    "@types/react-test-renderer": "^16.0.3",
     "babel-preset-expo": "^5.0.0",
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.7.1",
@@ -39,7 +39,6 @@
     "react-addons-test-utils": "^15.6.2",
     "react-dom": "^16.7.0",
     "react-native-typescript-transformer": "^1.2.11",
-    "react-test-renderer": "^16.7.0",
     "ts-jest": "^23.10.5",
     "tslint": "^5.12.1",
     "tslint-config-airbnb": "^5.11.1",
