--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "tsc-test": "tsc --project . --noEmit"
   },
   "dependencies": {
+    "@expo/vector-icons": "^9.0.0",
     "expo": "^32.0.0",
     "native-base": "^2.12.0",
     "react": "16.5.0",
@@ -24,7 +25,7 @@
     "@types/enzyme": "^3.1.15",
     "@types/enzyme-adapter-react-16": "^1.0.3",
     "@types/expo": "^31.0.7",
-    "@types/expo__vector-icons": "^6.2.3",
+    "@types/expo__vector-icons": "^9.0.1",
     "@types/jest": "^23.3.12",
     "@types/jest-each": "^0.3.3",
     "@types/react": "^16.7.18",
