--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,9 @@ script:
   - sonar-scanner
 notifications:
   email: false
+before_install:
+  - curl -o- -L https://yarnpkg.com/install.sh | bash
+  - export PATH="$HOME/.yarn/bin:$PATH"
 after_success:
   - yarn global add codecov
   - codecov
