revert travis caching

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,10 @@
 language: node_js
 node_js:
   - 'node'
-
+cache:
+  yarn: true
+  directories:
+    - node_modules
 addons:
   sonarcloud:
     organization: 'ankitprahladsoni-github'
